Added and completed the Creatures of Dransik

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -87,6 +87,9 @@
                         </li>
                         <li>
                           <a href="#hellHathNoFury">Hell hath No Fury</a>
+                        </li>
+                        <li>
+                          <a href="#creaturesOfDransik">Creatures of Dransik</a>
                         </li>                        
                         <li>
                           <a href="#theAlchemistsApprentice">The Alchemist's Apprentice</a>
@@ -235,6 +238,7 @@
                       <li class="li-border">13. Timothy Jager</li>
                       <li class="li-border">14. A Young Maid</li>
                       <li class="li-border">15. A Strange Looking Man</li>
+                      <li class="li-border">16. Knight Bastrop</li>
                     </ol>
                   </div>
                 </div>
@@ -1514,6 +1518,77 @@
                           </ul>
                           <hr>
                         </P>
+
+                        <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of Hell hath no Fury  -->
+                <div class="line"></div>
+                <!-- Start of Creatures of Dransik  -->
+                <div class="card bg-main half-width mb-5">
+                  <div class="card-header">
+                    <h2 id="creaturesOfDransik" class="anchor text-center">Creatures of Dransik</h2>
+                  </div>
+                  <div>
+                    <div class="card-body">
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Difficulty</th>
+                            <th>Skills</th>                            
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>Apprentice</td>
+                            <td>Combat</td>
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>NPC Quest Start</th>
+                            <th>Reward</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>
+                              Knight Bastrop
+                            </td> 
+                            <td>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Scalpel.png" alt="Scalpel" >
+                            </td>                        
+                      </table>
+                      <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/Valinor/NPCS/Knight_Bastrop.png" alt="Knight Bastrop">
+                        Speak to <span class="light-red">Knight Bastrop</span> ask you to help King Lotor II Knights to research the foul beasts and wicked ones that roam the lands.
+                        King Lotor has created a wondrous enchanted book which counts and records information about the creatures you hunt. He gives you the Hunter's Handbook. 
+                        PRESS H to open the book. Any creature you have slain will be added to the book. Take this scalpel and use it to study a living creature. Return to him once you have done that.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Hunter's Handbook</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Scalpel</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Creatures of Dransik</span><span class="orange">, Use the scalpel to identify a creature for Knight Bastrop in Valinor Castle</span>
+                      </p>
+                      <p>
+                        Studying the creatures first requires you to kill one first. This will add the first data to the Hunter's Handbook. Once you have the creature added to the book go find the same creature and use 
+                        the <span class="light-green">Scalpel</span> <img src="Images/Valinor/Items/Items/Scalpel.png" alt="Scalpel"> on the living creature to start the IDing process. If you fail you will see <span class="orange">You failed to learn anything new about the Creatures Name.</span>
+                        When you do succeed at Iding the creature you will see this message. <span class="green">You have identified the Creatures Name</span>. You will then be updated for the next part of the quest.   
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Creatures of Dransik</span><span class="orange">, You have successfully identified a creature! Return to Knight Bastrop in Valinor Castle.</span>
+                        <br>
+                        <span class="light-red">Knight Bastrop</span> will reward you for your job well done. He will inform you that the Lotorian Knights will help guide you in your studies.
+                        <hr>  
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You pledge to assist the Lotorian Knights by studying creatures which inhabit the Kingdom
+                      </P>
 
                         <p class="mt-4 py-3 text-center quest-complete">
                       Quest Complete
