Added new Patch Notes

--- a/index.html
+++ b/index.html
@@ -83,6 +83,104 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 1/31/2021</small> <br>
+              <p>
+                This was supposed to be delayed a few more weeks, but because of the pause (almost explosion), it has to go now. We were not 100% ready to release this update, so if there are some visual and gameplay
+                balance details that seem unfinished, that is why. Thanks for understanding! We'd rather have a few visual things and inconveniences than players lose items/time.
+              </p>
+              ===Gameplay Mechanics===
+              <ul>
+                <li>A new Skill: Identification</li>
+                <li>Auto Targeting for Melee/Archery (Use the ~ button for melee, SHIFT and ~ for ranged)</li>
+                <li>Gameplay Window Resize (drag to resize, use command "/pa reset" to foce back to normal size game window)</li>
+                <li>Hunter Handbook (Press H to view)</li>
+                <li>Increased return from shearing (bonus with more leadership)</li> 
+              </ul>
+              ===Identification Skill Items===
+              <ul>
+                <li>New Items to compliment the new Identification Skill and Hunter's Handbook</li>
+                <li>3 Types of Ink can now be made as part of alchemy. Revealing Ink, Exposing Ink, Illumination Ink.
+                  New creature drops were added to support this, but all recipes use some existing drops in game.
+                </li>  
+                <li>
+                  Rough Scrolls, Vellum, and Flawless Vellum can be made via leatherworking
+                </li>
+                <li>
+                  Apply ink to Rough Scoll and Vellum to make Scrolls of Identification that always succeed and give varying boots to the amount you learn about a creature
+                </li>
+                <li>
+                  Minor Scroll of Identification, Scroll of Identification, and Major Scroll of Identification
+                </li>
+              </ul>
+              ===Items===
+              <ul>
+                <li>New craftable thrown weapons armor (blacksmithing): iron fragments and iron shot</li>
+                <li>Adjusted stats on island helm/boots and spider silk leggings</li>
+                <li>Fixed gold bracelet paperdoll (was drawing a gold "thing" ....lol)</li>
+                <li>Adjusted stats on Valinor trainer weapons for progression balance</li>
+                <li>Flagged certain items for the right expansion/adjusted drop tables to clean up expansion items that did not belong there</li>
+                <li>Shield of Lotor adjusted</li>
+                <li>Adjusted stats on Ethereal Plate, Pristine, and various mid level necklaces.</li>
+                <li>Burning Ring and Wolf Totem are now dropping (accidentally excluded)</li>
+                <li>Staff of Glyphs and Ramthananax's Fury specials adjusted</li>
+              </ul>
+              ===NPCs===
+              <ul>
+              <li>
+                Adjusted several low-mid level boss timers; now randomized: Arllandah, Wasp Queens, Ewwww, Termigon Queens, Slobberknocker, Oak Rot, Hugla, Master Blaster, King Kobold, The Adversary (NEW), Andreev the Quick, King Mack Mack, Bonesnarl, Frump, Boss Scalo, Lava Mold, Umbergon, Goba Longblade, Ratnack, Snagglefang
+              </li>
+                <li>llanpa the Temptrest now spawning</li>
+                <li>Raqlun, unkea, llanpa should not wander too far and be inaccessible (because they were "ethereal" they would wander into mountains forever)</li>
+                <li>Lotor Crypt minibosses and some creatures now have chance to drop Paladin of the Flame and Holy Order gear</li>
+                <li>Lotor Crypt minibosses spawn adjusted</li>
+                <li>King Mack Mack no longer drops WWT, something else does</li>
+                <li>Adjusted deep shadows in Whisperdale</li>
+                <li>Orc alchemist shops now working (Krog, Samad, Maraket, Grell)</li>
+                <li>Scorpions now dropping beginner potions instead of greater potions</li>
+                <li>Followers canot target other players or followers of other players</li>
+                <li>Firefly swarms potion drop changed to beginner potions</li>
+                <li>Spawn of cultists in temple near Silvest adjusted</li>
+                <li>Pirate Skallywags were dropping TOF gear (outside of expansion near scalo den)</li>
+                <li>adjusted green dragons stats</li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>All dragon boss lairs have been adjusted (mechanics and /or map); still requires same scales to spawn, layout and how far away they can be dragged has been adjusted)</li>
+                <li>Newtown Crim spawn gate moved Northeast from the original location</li>
+                <li>Aunt Rekant room marked part of Krog</li>
+                <li>Guard in Samad that patrols farm marked as part of town</li>
+                <li>Silvest portal marked as part of town</li>
+                <li>Marked Eastwatch to include guard by spawngate and patrolling guard</li>
+                <li>Outpost guard types need to be set to neutral near Silvest</li>
+                <li>Fixed a few spost in fungoid cave walls where players can get stuck.</li>
+                <li>Filled in some gaps in black tail's cave lair</li>
+                <li>Fixed holes in dragon caves where players can get lost/stuck</li>
+              </ul>
+              ===Quests===
+              <ul>
+                <li>Silvest Mage Trainer quest line is now available: Talk to Val Clockworks on south side of Silvest, near pond, to start. Know bugs</li>
+                <li>Adjustment to creature categories for DTMs (many added; most hostile mobs in game now have DTM associated with it)</li>
+                <li>NEW Level 50 - 80 quest line starting Parian: Speak to the Warlords in Parian town hall.</li>
+                <li>Adjusted foraging TM to ask for quantity of any seed, not one seed type (still some bugs here)</li>
+                <li>Identification quest added to Valinor and Lotor's Castle</li>
+                <li>Added killcount tip to Captain of the Guard on Valinor</li>
+                <li>Added remind messages on the lowbie Night Elf Archer quests and more info on what weapon is needed for each quest.</li>
+                <li>Bat scroll quest made more generic (was specific to Valinor, but can be found on mainlands as well)</li>
+                <li>Added failure text on Kumba Northern and Davey Logan quest</li>
+                <li>Formatting on quest update speech for Kudah.</li>
+                <li>Fixed quest issue with Klaresh (old archer training quest)</li>
+                <li>Removed urn from hte dynamic quest (static obj that gets stuck in bp forever)</li>
+                <li>added Lotorian Knight in Lotor's Castle</li>
+                <li>Changed quest group on broken beasts quest to BFD</li>
+              </ul>
+              ===The Junk Drawer===
+              <ul>
+                <li>Pants on Valinor are now randomized colors</li>
+                <li>Fixed a few tufts of grass that were sticking out on road from Dawat to Samad</li>
+              </ul>
+            </article>  
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 12/5/2020</small> <br>
               <p>
                 Yesterday's patch has been applied to Legends. In addition, both Heroes and Legends received another fix:
