Completed Honor in Battle, added The Art of Combat

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -487,7 +487,7 @@
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 200 faction with the city of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">6,600</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
                         You were blessed by Warrog for protecting Krog. Return to Warrog for healing when needed.  
@@ -496,7 +496,146 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Leonard is Lost -->
+              <!-- End of Protect Krog! -->
+              <div class="line"></div>
+              <!-- Start of The Art of Combat -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="theArtOfCombat" class="anchor text-center">The Art of Combat</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Bograhk Dargarkh
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/_Stats.png' alt=''>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Bograhk_Dargarkh.png" alt="Bograhk Dargarkh">
+                        Speak to <span class="light-red">Bograhk Dargarkh</span> he will task you to speak to the 6 orc trainers all over Orc lands. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Large Blades</strong> in Krog <span class="light-red">Orzgath Mugzluk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Axes</strong> in Krog <span class="light-red">Tyugh Bruurshk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Blunt Weapons</strong> in Maraket <span class="light-red">Ulver Muurnahknahk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Polearms</strong> in Maraket <span class="light-red">Umduhk Dumdumuhk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Unarmed Combat</strong> in Samad <span class="light-red">Ox Juurnuhk</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Small Blades</strong> in Samad <span class="light-red">Gar-Gar Mootarhk</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> The Art of Combat</span><span class="orange">, Bograhk Dargarkh of Krog invited you to seek out and train with 6 Orc Combat Trainers.</span>
+                        <br>
+
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green"></span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You received training in the art of Sword combat from Orzgath Mugzluk.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Protect Krog! -->
+              <div class="line"></div>
+              <!-- Start of Honor in Battle -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="honorInBattle" class="anchor text-center">Honor In Battle</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 large Blades
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Orzgath Mugzluk
+                          </td>
+                          <td>
+                            Krog Rat (11)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Crude_Orcish_Sword.png" alt="Crude Orcish Sword" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Crude_Orcish_Sword_Stats.png' alt='Crude Orcish Sword Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Orcish_Warrior_Belt.png" alt="Orcish Warrior Belt" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Orcish_Warrior_Belt_Stats.png' alt='Orcish Warrior Belt Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Orzgath_Mugzluk.png" alt="Orzagth Mugzluk">
+                        Speak to <span class="light-red">Orzgath Mugzluk</span>, he will only speak to you if you have 15 in your large blades skill. If you are lvl 15 in your large blades skill he will teach you the way of a large blades user.
+                        He will task you to slice 40 Krog Rats with the Crude Orcish Sword.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Sword</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Honor in Battle</span><span class="orange">, Slice 40 Krog Rats in two for Orzgath Mugzluk of Krog with the Crude Orcish Sword.</span>
+                        <br>
+                        Head southeast of Krog and you will find some <span class="red">Krog Rats</span>. <img class="monster-img" src="Images/NPC/Monsters/Krog_Rat.png" alt="Krog Rat"> As you slay the Krog Rats you will be updated <span class="green">You have slashed X Krog Rats for Orgath Mugzluk!!</span>
+                        If you kill one with out the Crude Orcish Sword you will be updated with a warning, <span class="red">You must kill Krog Rats with the Crude Orcish Sword to complete Orzgath's training.</span> Once you have killed 40 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Honor in Battle</span><span class="orange">, Return to Orzgath Mugzluk in Krog to complete your training.</span>  
+                        Speak to Orzgath Mugzluk he will reward you with the Orcish Warrior Belt.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Belt</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">19,800</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You received training in the art of Sword combat from Orzgath Mugzluk.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Protect Krog! -->
               <div class="line"></div>
 
               <footer class="jumbotron text-center">
