Added VIP Grab Bag Feb, New Patch Notes

--- a/index.html
+++ b/index.html
@@ -83,6 +83,29 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 2/4/2021</small> <br>
+              <p>
+                This patch is to prepare for tomorrow's Chaos server; it will appear in the Ashen Empires game nder Heroes and Legends... So everything has to be in sync!
+                <br>
+                A few other things were adjusted/fixed:
+              </p>
+              <ul>
+                <li>Adjusted stats on Elder Treant, Poisonous Fungoid</li>
+                <li>Adjusted spawn of elder Treants</li>
+                <li>Ignis Fatuus HP adjusted up</li>
+                <li>Added art for scalpel</li>
+                <li>Adjusted level rew on all warlord gear (requires level 50)</li>
+                <li>Fixed new alchemy mats - they now fit in alchemy case</li>
+                <li>Vellum crafted with superior leather instead of leather</li>
+                <li>Fixed Anton Darushk quest (looks for neutral or lower alignment)</li>
+                <li>Fixed quest typo in ID quest (said looking glass instead of scalpel</li>
+                <li>Hunters have their own print instead of Guard halt!</li>
+                <li>Totem of Sabal's Children now usable on Heroes server</li>
+                <li>Game Window has a resize button that will force the window back to normal size (does same thing as /pa reset)</li> 
+              </ul>
+            </article>              
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 1/31/2021</small> <br>
               <p>
                 This was supposed to be delayed a few more weeks, but because of the pause (almost explosion), it has to go now. We were not 100% ready to release this update, so if there are some visual and gameplay
@@ -726,6 +749,9 @@
             <div class="line"></div>
 
             <h3 id="vipGrabBags" class="anchor">Vip Grab Bags</h3>
+            <p>VIP subscription required: Receive your first grab bag on the first month anniversary of VIP subscription,
+              then on the first of every month after that you remain a VIP customer.
+            </p>
             <!-- Start Grab Bags -->
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
@@ -915,6 +941,25 @@
                                 <li>3 Lair of Minos Access Passes</li>
                                 <li>2 Greater Potion Packs</li>
                                 <li>1 Deluxe Mask Pack</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#february2021">
+                          February 2021</a>
+                        </h5>
+                      </div>
+                      <div id="february2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>3 Berserker Potion Packs</li>
+                                <li>1 Rune Pack</li>
+                                <li>1 Wizard's Familiar</li>
+                                <li>1 Avatar Mask Pack</li>
+                                <li>3 Personal Power hours</li>
                             </ul>
                         </div>
                       </div>
