Added new Patch Notes

--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 2/09/2021</small> <br>
+              <p>
+                (Chaos)
+              </p>
+              <ul>
+                <li>Ryonkah's life steal damaged has been adjusted</li>
+              </ul>
+            </article>  
+            <article>
+              <small class="article-date">FujiQ 2/09/2021</small> <br>
+              <p>
+                A few hotfixes (Chaos Only)
+              </p>
+              <ul>
+                <li>Deathcap quest no longer adjusts server xp factor</li>
+                <li>Symboled Blade of Destruction adjust on special chance to strike</li>
+                <li>Fireseeker adjust on special damage amount</li>
+                <li>No Chaos points gained/lost during PVP; temporarily disabled until it can be fixed without breaking healing potion timers</li>
+              </ul>
+            </article>  
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 2/4/2021</small> <br>
               <p>
                 This patch is to prepare for tomorrow's Chaos server; it will appear in the Ashen Empires game nder Heroes and Legends... So everything has to be in sync!
