Completed Formidable Formicidae

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -300,10 +300,7 @@
                           <img class="thumbnail-img" src="Images/BlackSwamp/Guardian_of_Krog.png" alt="Guardian of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Guardian_of_Krog_Stats.png' alt='Guardian of Krog Stats'>">
                           <img class="thumbnail-img" src="Images/BlackSwamp/Leggings_of_Krog.png" alt="Leggings of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Leggings_of_Krog_Stats.png' alt='Leggings of Krog Stats'>">
                           <img class="thumbnail-img" src="Images/BlackSwamp/Armor_of_Krog.png" alt="Armor of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Armor_of_Krog_Stats.png' alt='Armor of Krog Stats'>">
-                          <br>
-                          
-
-
+                          <br>                        
                         </td>                        
                     </table>
 
@@ -425,6 +422,76 @@
                 </div>
               </div>
               <!-- End of Leonard is Lost -->
+              <div class="line"></div>
+              <!-- Start of Formidable Formicidae -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="formidableFormicidae" class="anchor text-center">Formidable Formicidae</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monster</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Oonga
+                          </td>
+                          <td>
+                            Fire Ant (lvl 8)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Fire_Ant_Leg_Bracer.png" alt="Ant Leg Bracer" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Fire_Ant_Leg_Bracer_Stats.png' alt='Ant Leg Bracer Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Gold_700.png' alt='Gold 700'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Haburt.png" alt="Haburt">
+                        Speak to <span class="light-red">Haburt</span> he has a problem and he says you owe hime for since you scared him. There is a fire ant colony south of Krog that is growning out of control.
+                        He can't miss one day or he is in for it. He wants a teensy break. He ask if you can help squash them to give him a break. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Formidable Formicidae</span><span class="orange">, Head south of Krog and kill 40 Fire Ants for Haburt.</span>
+                        <br>
+                        Check this map for the location of the Fire Ant colony. <img class="monster-img" src="Images/BlackSwamp/Fire_Ant_Colony_Krog.png" alt="Map of the Fire Ant Colony south of Krog"> Be careful not to get swarmed by the <span class="red">fire ants</span>. <img class="monster-img" src="Images/NPC/Monsters/Fire_Ant.png" alt="Fire Ant">
+                        They can easily overwhelm you if your not careful. Watch out for the one spawn of the <span class="red">Large Fire Ant</span>. <img class="monster-img" src="" alt="Large Fire Ant"> Kill 40 you will be updated along the way to let you konw how many you have killed.
+                        <br>
+                        <span class="green">QUEST UPDATE: You have killed 40 Fire Ants for Haburt</span> 
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Formidable Formicidae</span><span class="orange">, You have killed 40 Fire Ants for Haburt. Return to him in Krog.</span>
+                        <br>
+                        When you return to <span class="light-red">Haburt</span> he has a big surprise for you. He says you are now friends. He gives you some bracers made from ant legs.  
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Ant Leg Bracer</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">700 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Krog!</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">39,600</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Formidable Formicidae -->
               <div class="line"></div>
               <!-- Start of Protect Krog! -->
               <div class="card bg-main half-width mb-5">
